--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -60,11 +60,16 @@
 
                 <button class="btn btn-primary" type="submit" value="Sign In">Login</button>
             </form>
+    </div>
 
+        <div class="col-md-10 mt-5">
 
+            <label style="font-size:20px">Want to start sponsoring our club?</label>
+            <form method="post" th:action="@{/register}">
+                <button class="btn btn-primary" type="submit">Register</button>
+            </form>
 
         </div>
-    </div>
 </div>
 
 
