Added login function

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -65,7 +65,7 @@
         <div class="col-md-10 mt-5">
 
             <label style="font-size:20px">Want to start sponsoring our club?</label>
-            <form method="post" th:action="@{/register}">
+            <form method="get" th:action="@{/register}">
                 <button class="btn btn-primary" type="submit">Register</button>
             </form>
 
