Fixed separate user main html file mechanic

--- a/src/main/resources/templates/user/main_without_contract_user.html
+++ b/src/main/resources/templates/user/main_without_contract_user.html
@@ -58,7 +58,7 @@
                 <div style="font-size:20px">You have not signed a contract yet. Press "Sign a Contract".</div>
             </div>
 
-            <form method="post" th:action="@{/record_admin}">
+            <form method="post" th:action="@{/new_form_user}">
                 <button class="btn btn-primary" type="submit" onclick="" value="">Sign a Contract
                 </button>
             </form>
