--- a/src/main/resources/templates/user/edit_form_user.html
+++ b/src/main/resources/templates/user/edit_form_user.html
@@ -24,11 +24,6 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/record_admin}">Contracts
-          </a>
-        </li>
-
-        <li class="nav-item">
           <a class="nav-link" th:inline="text" style="color:lightskyblue;">Logged in as <b
                   style="text-transform:capitalize">[[${#httpServletRequest.remoteUser}]]</b></a>
         </li>
@@ -49,35 +44,31 @@
   <br/>
   <h1>Edit Contract</h1>
   <br/>
-  <form action="#" th:action="@{/update}" th:object="${contract}" method="post">
+  <form action="#" th:action="@{/update_user}" th:object="${contract}" method="post">
     <table border = "1" cellpadding = "10">
       <!-- Table row-->
       <tr>
-        <td>Nr sponsora:</td>
-        <td><input type="text" th:field="*{nr_sponsora}"></td>
+        <td>Sponsor Name:</td>
+        <td><input type="text" th:field="*{nazwa_sponsora}" readonly="readonly"></td>
       </tr>
       <tr>
-        <td>Nazwa sponsora:</td>
-        <td><input type="text" th:field="*{nazwa_sponsora}"></td>
+        <td>Date of Expiry:</td>
+        <td><input type="text" th:field="*{data_zakonczenia_umowy}" readonly="readonly"></td>
       </tr>
       <tr>
-        <td>Data zakonczenia umowy:</td>
-        <td><input type="text" th:field="*{data_zakonczenia_umowy}"></td>
+        <td>Monetary Value:</td>
+        <td><input type="text" th:field="*{wartosc_finansowa}" readonly="readonly"></td>
       </tr>
       <tr>
-        <td>Wartosc finansowa:</td>
-        <td><input type="text" th:field="*{wartosc_finansowa}"></td>
+        <td>Industry:</td>
+        <td><input type="text" th:field="*{branza}" readonly="readonly"></td>
       </tr>
       <tr>
-        <td>Branza:</td>
-        <td><input type="text" th:field="*{branza}"></td>
-      </tr>
-      <tr>
-        <td>Nr telefonu:</td>
+        <td>Phone Number:</td>
         <td><input type="text" th:field="*{nr_telefonu}"></td>
       </tr>
       <tr>
-        <td>email:</td>
+        <td>E-mail:</td>
         <td><input type="text" th:field="*{email}"></td>
       </tr>
       <tr>
