Added fan registration

--- a/src/main/resources/templates/admin/main_admin.html
+++ b/src/main/resources/templates/admin/main_admin.html
@@ -60,11 +60,11 @@
                     to the main page!
                 </label>
 
-                <div style="font-size:20px">If you want to see all contracts, press "All Contracts".</div>
+                <div style="font-size:20px">If you want to see sponsor contracts, press "Contracts".</div>
             </div>
 
             <form method="post" th:action="@{/record_admin}">
-                <button class="btn btn-primary" type="submit" onclick="" value="">All Contracts
+                <button class="btn btn-primary" type="submit" onclick="" value="">Contracts
                 </button>
             </form>
             <br/>
