--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -64,9 +64,18 @@
 
         <div class="col-md-10 mt-5">
 
-            <label style="font-size:20px">Want to start sponsoring our club?</label>
-            <form method="get" th:action="@{/register}">
+            <label style="font-size:20px">Become a fan</label>
+            <form method="get" th:action="@{/register_fan}">
                 <button class="btn btn-primary" type="submit">Register</button>
+            </form>
+
+        </div>
+
+        <div class="col-md-10 mt-5">
+
+            <label style="font-size:20px">Want to sponsor our club?</label>
+            <form method="get" th:action="@{/register}">
+                <button class="btn btn-primary" type="submit">Sponsor</button>
             </form>
 
         </div>
