--- a/src/main/resources/templates/user/register_user.html
+++ b/src/main/resources/templates/user/register_user.html
@@ -38,7 +38,7 @@
         <div class="col-md-6 offset-md-3">
             <div class="card">
                 <div class="card-header">
-                    <h2 class="text-center">Registration form</h2>
+                    <h2 class="text-center">Sponsor registration form</h2>
                 </div>
                 <div class="card-body">
                     <div th:if="${error}" class="alert alert-danger" role="alert">
