Added part of stadium management

--- a/src/main/resources/templates/admin/edit_stadium_form_admin.html
+++ b/src/main/resources/templates/admin/edit_stadium_form_admin.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Edit Contract</title>
+  <title>Edit Stadium</title>
   <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
 </head>
 <body>
