--- a/src/main/resources/templates/admin/record_admin.html
+++ b/src/main/resources/templates/admin/record_admin.html
@@ -31,6 +31,11 @@
         </li>
 
         <li class="nav-item">
+          <a class="nav-link" th:href="@{/record_stadium_admin}">Stadiums
+          </a>
+        </li>
+
+        <li class="nav-item">
           <a class="nav-link" th:inline="text" style="color:lightskyblue;">Logged in as <b
                   style="text-transform:capitalize">[[${#httpServletRequest.remoteUser}]]</b></a>
         </li>
