Stadium management done

--- a/src/main/resources/templates/admin/new_stadium_form_admin.html
+++ b/src/main/resources/templates/admin/new_stadium_form_admin.html
@@ -66,31 +66,31 @@
       <!--                <td><input type="text" th:field="*{nr_sponsora}"></td>-->
       <!--            </tr>-->
       <tr>
-        <td>Sponsor Name:</td>
+        <td>Number of seats:</td>
         <td><input type="text" th:field="*{ilosc_miejsc}"></td>
       </tr>
       <tr>
-        <td>Date of Expiry:</td>
+        <td>Name:</td>
         <td><input type="text" th:field="*{nazwa}"></td>
       </tr>
       <tr>
-        <td>Monetary Value:</td>
+        <td>Date of opening:</td>
         <td><input type="text" th:field="*{data_otwarcia}"></td>
       </tr>
       <tr>
-        <td>Industry:</td>
+        <td>Has parking?:</td>
         <td><input type="text" th:field="*{czy_parking}"></td>
       </tr>
       <tr>
-        <td>Phone Number:</td>
+        <td>Type of grass:</td>
         <td><input type="text" th:field="*{rodzaj_murawy}"></td>
       </tr>
       <tr>
-        <td>E-mail:</td>
+        <td>Has closeable roof?:</td>
         <td><input type="text" th:field="*{czy_zamykany_dach}"></td>
       </tr>
       <tr>
-        <td>E-mail:</td>
+        <td>Address:</td>
         <td><input type="text" th:field="*{adres}"></td>
       </tr>
       <tr>
