Updated form editions

--- a/src/main/resources/templates/admin/edit_form_admin.html
+++ b/src/main/resources/templates/admin/edit_form_admin.html
@@ -58,31 +58,31 @@
     <table border = "1" cellpadding = "10">
       <!-- Table row-->
       <tr>
-        <td>Nr sponsora:</td>
+        <td>Sponsor ID:</td>
         <td><input type="text" th:field="*{nr_sponsora}"></td>
       </tr>
       <tr>
-        <td>Nazwa sponsora:</td>
+        <td>Sponsor Name:</td>
         <td><input type="text" th:field="*{nazwa_sponsora}"></td>
       </tr>
       <tr>
-        <td>Data zakonczenia umowy:</td>
+        <td>Date of Expiry:</td>
         <td><input type="text" th:field="*{data_zakonczenia_umowy}"></td>
       </tr>
       <tr>
-        <td>Wartosc finansowa:</td>
+        <td>Monetary Value:</td>
         <td><input type="text" th:field="*{wartosc_finansowa}"></td>
       </tr>
       <tr>
-        <td>Branza:</td>
+        <td>Industry:</td>
         <td><input type="text" th:field="*{branza}"></td>
       </tr>
       <tr>
-        <td>Nr telefonu:</td>
+        <td>Phone Number:</td>
         <td><input type="text" th:field="*{nr_telefonu}"></td>
       </tr>
       <tr>
-        <td>email:</td>
+        <td>E-mail:</td>
         <td><input type="text" th:field="*{email}"></td>
       </tr>
       <tr>
