Finished stadium management

--- a/src/main/resources/templates/admin/edit_stadium_form_admin.html
+++ b/src/main/resources/templates/admin/edit_stadium_form_admin.html
@@ -74,7 +74,7 @@
         <td><input type="text" th:field="*{data_otwarcia}"></td>
       </tr>
       <tr>
-        <td>Has parking?:</td>
+        <td>Has parking?</td>
         <td>
           <select th:field="*{czy_parking}">
             <option value="true" th:text="Yes"></option>
@@ -83,6 +83,7 @@
         </td>
       </tr>
       <tr>
+        <td>Type of grass</td>
         <td>
           <select th:field="*{rodzaj_murawy}">
             <option value="N" th:text="Natural"></option>
@@ -91,7 +92,7 @@
         </td>
       </tr>
       <tr>
-        <td>Has closeable roof?:</td>
+        <td>Has closeable roof?</td>
         <td>
           <select th:field="*{czy_zamykany_dach}">
             <option value="true" th:text="Yes"></option>
