--- a/src/main/resources/templates/admin/record_stadium_admin.html
+++ b/src/main/resources/templates/admin/record_stadium_admin.html
@@ -82,14 +82,14 @@
         <!-- Table body -->
         <tbody>
         <tr th:each = "stadium : ${listStadium}">
-            <td th:text = "${stadium.nr_stadionu}">ID</td>
-            <td th:text = "${stadium.ilosc_miejsc}">Sponsor Name</td>
-            <td th:text = "${stadium.nazwa}">Date of Expiry</td>
-            <td th:text = "${stadium.data_otwarcia}">Monetary Value</td>
-            <td th:text = "${stadium.czy_parking}">Industry</td>
-            <td th:text = "${stadium.rodzaj_murawy}">Active Status</td>
-            <td th:text = "${stadium.czy_zamykany_dach}">Phone Number</td>
-            <td th:text = "${stadium.adres}">E-mail</td>
+            <td th:text = "${stadium.nr_stadionu}">Stadium Number</td>
+            <td th:text = "${stadium.ilosc_miejsc}">Number of seats</td>
+            <td th:text = "${stadium.nazwa}">Name</td>
+            <td th:text = "${stadium.data_otwarcia}">Date of opening</td>
+            <td th:text = "${stadium.czy_parking}">Has parking?</td>
+            <td th:text = "${stadium.rodzaj_murawy}">Type of grass</td>
+            <td th:text = "${stadium.czy_zamykany_dach}">Has closeable roof?</td>
+            <td th:text = "${stadium.adres}">Address</td>
             <td>
                 <a th:href="@{'/edit_stadium_admin/' + ${stadium.nr_stadionu}}">Edit</a>
                 &nbsp;&nbsp;&nbsp;&nbsp;
