--- a/src/main/resources/templates/admin/new_match_form_admin.html
+++ b/src/main/resources/templates/admin/new_match_form_admin.html
@@ -61,39 +61,39 @@
     <!-- Table -->
     <table border = "1" cellpadding = "10">
       <tr>
-        <td>Number of seats:</td>
+        <td>Match Number:</td>
         <td><input type="text" th:field="*{nr_meczu}"></td>
       </tr>
       <tr>
-        <td>Name:</td>
+        <td>Stadium Number:</td>
         <td><input type="text" th:field="*{nr_stadionu}"></td>
       </tr>
       <tr>
-        <td>Date of opening:</td>
+        <td>Date of Match:</td>
         <td><input type="text" th:field="*{data}"></td>
       </tr>
       <tr>
-        <td>Has parking?</td>
+        <td>Added Time:</td>
         <td><input type="text" th:field="*{doliczony_czas}"></td>
       </tr>
       <tr>
-        <td>Type of grass:</td>
+        <td>Hosts:</td>
         <td><input type="text" th:field="*{gospodarze}"></td>
       </tr>
       <tr>
-        <td>Has closeable roof?</td>
+        <td>Guests:</td>
         <td><input type="text" th:field="*{goscie}"></td>
       </tr>
       <tr>
-        <td>Address:</td>
+        <td>Took Place?</td>
         <td><input type="text" th:field="*{czy_sie_odbyl}"></td>
       </tr>
       <tr>
-        <td>Address:</td>
+        <td>Hosts' goals:</td>
         <td><input type="text" th:field="*{bramki_gospodarzy}"></td>
       </tr>
       <tr>
-        <td>Address:</td>
+        <td>Guests' goals:</td>
         <td><input type="text" th:field="*{bramki_gosci}"></td>
       </tr>
       <tr>
