--- a/src/main/resources/templates/admin/edit_match_form_admin.html
+++ b/src/main/resources/templates/admin/edit_match_form_admin.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>New Contract</title>
+    <title>Edit Stadium</title>
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
 </head>
 <body>
@@ -54,48 +54,48 @@
         </div>
     </div>
 </nav>
-<div align="center">
-    <br/>
-    <!-- Page header -->
-    <h1>Enter new sponsorship contract</h1>
 
-    <!-- End line/ new line -->
+<div align = "center">
     <br/>
-
-    <form action="#" th:action="@{/save}" th:object="${contract}" method="post">
-        <!-- Table -->
+    <h1>Edit Stadium</h1>
+    <br/>
+    <form action="#" th:action="@{/update_match}" th:object="${match}" method="post">
         <table border = "1" cellpadding = "10">
             <!-- Table row-->
-<!--            <tr>-->
-<!--                <td>ID:</td>-->
-<!--                <td><input type="text" th:field="*{nr_sponsora}"></td>-->
-<!--            </tr>-->
             <tr>
-                <td>Sponsor Name:</td>
-                <td><input type="text" th:field="*{nazwa_sponsora}"></td>
+                <td>Stadium ID number:</td>
+                <td><input type="text" th:field="*{nr_stadionu}"></td>
             </tr>
             <tr>
-                <td>Date of Expiry:</td>
-                <td><input type="text" th:field="*{data_zakonczenia_umowy}"></td>
+                <td>Date of Match:</td>
+                <td><input type="text" th:field="*{data}"></td>
             </tr>
             <tr>
-                <td>Monetary Value:</td>
-                <td><input type="text" th:field="*{wartosc_finansowa}"></td>
+                <td>Added Time:</td>
+                <td><input type="text" th:field="*{doliczony_czas}"></td>
             </tr>
             <tr>
-                <td>Industry:</td>
-                <td><input type="text" th:field="*{branza}"></td>
+                <td>Hosts:</td>
+                <td><input type="text" th:field="*{gospodarze}"></td>
             </tr>
             <tr>
-                <td>Phone Number:</td>
-                <td><input type="text" th:field="*{nr_telefonu}"></td>
+                <td>Guests:</td>
+                <td><input type="text" th:field="*{goscie}"></td>
             </tr>
             <tr>
-                <td>E-mail:</td>
-                <td><input type="text" th:field="*{email}"></td>
+                <td>Took Place?</td>
+                <td><input type="text" th:field="*{czy_sie_odbyl}"></td>
             </tr>
             <tr>
-                <td style="text-align: center;" colspan="2"><button class="btn btn-primary" type="submit">Add</button></td>
+                <td>Hosts' goals</td>
+                <td><input type="text" th:field="*{bramki_gospodarzy}"></td>
+            </tr>
+            <tr>
+                <td>Guests' goals</td>
+                <td><input type="text" th:field="*{bramki_gosci}"></td>
+            </tr>
+            <tr>
+                <td style="text-align: center;" colspan="2"><button class="btn btn-primary" type="submit">Save</button></td>
             </tr>
 
         </table>
