--- a/src/main/resources/templates/admin/main_admin.html
+++ b/src/main/resources/templates/admin/main_admin.html
@@ -33,6 +33,11 @@
                 </li>
 
                 <li class="nav-item">
+                    <a class="nav-link" th:href="@{/record_matches_admin}">Matches
+                    </a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link" th:href="@{/record_stadium_admin}">Stadiums
                     </a>
                 </li>
