--- a/src/main/resources/templates/admin/new_stadium_form_admin.html
+++ b/src/main/resources/templates/admin/new_stadium_form_admin.html
@@ -29,6 +29,11 @@
         </li>
 
         <li class="nav-item">
+          <a class="nav-link" th:href="@{/record_matches_admin}">Matches
+          </a>
+        </li>
+
+        <li class="nav-item">
           <a class="nav-link" th:href="@{/record_stadium_admin}">Stadiums
           </a>
         </li>
