--- a/src/main/resources/templates/admin/record_stadium_admin.html
+++ b/src/main/resources/templates/admin/record_stadium_admin.html
@@ -30,6 +30,11 @@
                 </li>
 
                 <li class="nav-item">
+                    <a class="nav-link" th:href="@{/record_matches_admin}">Matches
+                    </a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link active" th:href="@{/record_stadium_admin}">Stadiums
                         <span class="sr-only">(current)</span>
                     </a>
