Further editions in register_fan.html

--- a/src/main/resources/templates/fan/record_fan.html
+++ b/src/main/resources/templates/fan/record_fan.html
@@ -61,10 +61,13 @@
         <!-- Table header -->
         <thead>
         <tr> <!-- Table row -->
-            <th style="text-align: center;">ID Kibica</th> <!–- Table column -->
-            <th style="text-align: center;">Nr meczu</th>
-            <th style="text-align: center;">Nr stadionu</th>
-            <th style="text-align: center;">Action</th>
+            <th style="text-align: center;">Name</th> <!–- Table column -->
+            <th style="text-align: center;">Surname</th>
+            <th style="text-align: center;">Date</th>
+            <th style="text-align: center;">Stadium</th>
+            <th style="text-align: center;">Address</th>
+            <th style="text-align: center;">Hosts</th>
+            <th style="text-align: center;">Guests</th>
         </tr>
         </thead>
         <!-- Table body -->
@@ -91,5 +94,6 @@
 <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 <script th:src="@{/js/script.js}"></script>
 
-    </body>
+</div>
+</body>
 </html>
